@@ -1,23 +1,24 @@
 package com.wairesd.discordbm.addons.dbmguimanager.menu;
 
-import com.jodexindustries.jguiwrapper.gui.SimpleGui;
+import com.jodexindustries.jguiwrapper.api.item.ItemWrapper;
+import com.jodexindustries.jguiwrapper.gui.advanced.AdvancedGui;
 import com.wairesd.discordbm.api.DiscordBMAPI;
 import com.wairesd.discordbm.api.command.Command;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
-import org.bukkit.entity.Player;
-import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.ItemMeta;
+import org.bukkit.entity.HumanEntity;
 import org.bukkit.plugin.java.JavaPlugin;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class CommandListMenu extends SimpleGui {
+import static com.jodexindustries.jguiwrapper.gui.AbstractGui.LEGACY_AMPERSAND;
+
+public class CommandListMenu extends AdvancedGui {
     private final DiscordBMAPI api;
     private final int page;
-    private final int pageSize;
     private final List<Command> commands;
+    private final int pageSize;
+    private final JavaPlugin plugin;
 
     public CommandListMenu(DiscordBMAPI api) {
         this(api, 0);
@@ -29,6 +30,7 @@ public class CommandListMenu extends SimpleGui {
         this.page = page;
         this.commands = api.getCommandRegistration().getRegisteredCommands();
         this.pageSize = holder().getInventory().getSize() - (hasNextPage() ? 1 : 0) - (hasPrevPage() ? 1 : 0);
+        this.plugin = JavaPlugin.getProvidingPlugin(getClass());
         initMenu();
     }
 
@@ -36,7 +38,7 @@ public class CommandListMenu extends SimpleGui {
         int count = api.getCommandRegistration().getRegisteredCommands().size();
         int maxPage = (count - 1) / 52;
         if (page < maxPage) return 54;
-        if (page > 0) return 54; 
+        if (page > 0) return 54;
         int left = count - page * 52;
         int size = ((left - 1) / 9 + 1) * 9;
         return Math.max(9, Math.min(size, 54));
@@ -53,43 +55,48 @@ public class CommandListMenu extends SimpleGui {
     private void initMenu() {
         int start = page * 52;
         int end = Math.min(start + 52, commands.size());
-        int slot = 0;
-        if (hasPrevPage()) slot = 1;
+        int slot = hasPrevPage() ? 1 : 0;
         for (int i = start; i < end; i++) {
-            if (slot >= holder().getInventory().getSize() || (hasNextPage() && slot == 53)) break;
-            Command cmd = commands.get(i);
-            ItemStack item = new ItemStack(Material.PAPER);
-            ItemMeta meta = item.getItemMeta();
-            meta.setDisplayName("§a" + cmd.getName());
-            meta.setLore(Arrays.asList("§7" + cmd.getDescription()));
-            item.setItemMeta(meta);
-            holder().getInventory().setItem(slot, item);
+            final Command cmd = commands.get(i);
+            final int currentSlot = slot;
+            registerItem("cmd_" + i, builder -> {
+                builder.slots(currentSlot)
+                        .defaultItem(ItemWrapper.builder(Material.PAPER)
+                                .displayName(LEGACY_AMPERSAND.deserialize("&a" + cmd.getName()))
+                                .lore(List.of(LEGACY_AMPERSAND.deserialize("&7" + cmd.getDescription())))
+                                .build()
+                        );
+            });
             slot++;
+            if (slot >= holder().getInventory().getSize() || (hasNextPage() && slot == 53)) break;
         }
         if (hasNextPage()) {
-            ItemStack next = new ItemStack(Material.ARROW);
-            ItemMeta meta = next.getItemMeta();
-            meta.setDisplayName("§bСледующая страница");
-            next.setItemMeta(meta);
-            holder().getInventory().setItem(53, next);
+            registerItem("next_page", builder -> {
+                builder.slots(53)
+                        .defaultItem(ItemWrapper.builder(Material.ARROW)
+                                .displayName(LEGACY_AMPERSAND.deserialize("&bСледующая страница"))
+                                .build())
+                        .defaultClickHandler((event, controller) -> {
+                            HumanEntity player = event.getWhoClicked();
+                            event.setCancelled(true);
+                            player.closeInventory();
+                            Bukkit.getScheduler().runTask(plugin, () -> new CommandListMenu(api, page + 1).open(player));
+                        });
+            });
         }
         if (hasPrevPage()) {
-            ItemStack prev = new ItemStack(Material.ARROW);
-            ItemMeta meta = prev.getItemMeta();
-            meta.setDisplayName("§bПредыдущая страница");
-            prev.setItemMeta(meta);
-            holder().getInventory().setItem(45, prev);
+            registerItem("prev_page", builder -> {
+                builder.slots(45)
+                        .defaultItem(ItemWrapper.builder(Material.ARROW)
+                                .displayName(LEGACY_AMPERSAND.deserialize("&bПредыдущая страница"))
+                                .build())
+                        .defaultClickHandler((event, controller) -> {
+                            HumanEntity player = event.getWhoClicked();
+                            event.setCancelled(true);
+                            player.closeInventory();
+                            Bukkit.getScheduler().runTask(plugin, () -> new CommandListMenu(api, page - 1).open(player));
+                        });
+            });
         }
-        setClickHandlers((event, g) -> {
-            int raw = event.getRawSlot();
-            Player player = (Player) event.getWhoClicked();
-            if (hasNextPage() && raw == 53) {
-                player.closeInventory();
-                Bukkit.getScheduler().runTaskLater(JavaPlugin.getProvidingPlugin(getClass()), () -> new CommandListMenu(api, page + 1).open(player), 1L);
-            } else if (hasPrevPage() && raw == 45) {
-                player.closeInventory();
-                Bukkit.getScheduler().runTaskLater(JavaPlugin.getProvidingPlugin(getClass()), () -> new CommandListMenu(api, page - 1).open(player), 1L);
-            }
-        }, 45, 53);
     }
 } 
